<resources>
    <string name="app_name">Proyecto4_rjt</string>
    <string name="appName">Dice Shooter</string>
    <string name="usuario">Usuario</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="reinicio">REINICIO</string>
    <string name="tira_dado">TIRA DADO</string>
    <string name="dado_4_caras">Dado 4 caras</string>
    <string name="dado_6_caras">Dado 6 caras</string>
    <string name="dado_8_caras">Dado 8 caras</string>
    <string name="dadoEscodigo">Dado de 8 caras saca un</string>
    <string name="puntuacion">0</string>
    <string name="puntuacionDado">7</string>
    <string name="resultados">Resultados</string>
    <string name="puntuacionInfo">Usuario ha logrado un total de XX puntos en X tiradas</string>
    <string name="puntuacion4caras">X tiradas con el dado de 4 caras para lograr XX puntos</string>
    <string name="puntuacion6caras">X tiradas con el dado de 6 caras para lograr XX puntos</string>
    <string name="puntuacion8caras">X tiradas con el dado de 8 caras para lograr XX puntos</string>
    <string name="compartir">Compartir</string>
</resources>