<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/appName"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="139dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@drawable/logo"
        android:importantForAccessibility="no" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="408dp"
        android:layout_height="517dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioGroup
            android:id="@+id/rdGRoup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp">

            <RadioButton
                android:id="@+id/dado4caras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/dado4caras"
                android:text="@string/dado_4_caras"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/dado6caras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:drawableBottom="@drawable/dado6caras"
                android:text="@string/dado_6_caras"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/dado8caras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/dado8caras"
                android:text="@string/dado_8_caras"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="156dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:background="#00FFFFFF"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnTirar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#43A047"
                android:includeFontPadding="false"
                android:onClick="TirarDado"
                android:padding="0dp"
                android:text="@string/tira_dado"
                android:textAlignment="center"
                android:textSize="22sp"
                app:cornerRadius="5dp"
                app:iconPadding="0dp" />

            <TextView
                android:id="@+id/puntuacion"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#FDFA35"
                android:gravity="center"
                android:text="@string/puntuacion"
                android:textAlignment="center"
                android:textColor="#3949AB"
                android:textSize="60sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/btnReiniciar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#43A047"
                android:includeFontPadding="false"
                android:onClick="Reinicio"
                android:padding="0dp"
                android:text="@string/reinicio"
                android:textAlignment="center"
                android:textSize="22sp"
                app:cornerRadius="5dp"
                app:iconPadding="0dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutPuntuacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/infoTiradaDado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginStart="-40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/dadoEscodigo"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/infoTirada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:includeFontPadding="false"
            android:padding="0dp"
            android:text="@string/puntuacionDado"
            android:textColor="#43A047"
            android:textSize="96sp" />

    </LinearLayout>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/dadosCarga"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C3000000"

        android:src="@drawable/dados_carga"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>